<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Guepardo Birthdays</string>

    <string name="create">Create</string>
    <string name="edit"> Edit </string>
    <string name="delete">Delete</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
	<string name="add">Add</string>
	<string name="addPlus">+</string>
    <string name="back">Back</string>
    
    <string name="title">Title</string>
    <string name="content">Content</string>
    
    <string name="prompt">Prompt</string>
    <string name="ok">OK</string>
    <string name="neutral">Neutral</string>
    
	<string name="birthday">Birthday</string>
	<string name="hint_name_birthday">Enter a name</string>
	<string name="hint_day_birthday">Enter a day</string>
	<string name="hint_month_birthday">Enter a month</string>
	<string name="hint_year_birthday">Enter a year</string>
    
    <string name="hint">Enter your notes, please!</string>
    <string name="example">Example</string>
    
    <string name="contentDescription">This is an image</string>
    
    <string name="impressum">Impressum</string>
    <string name="author">Jonas Schubert\nGuepardoApps</string>
    <string name="email">E-Mail: guepardoapps@gmail.com</string>
    <string name="githubLink">https://github.com/Gu3pardo/GuepardoBirthday/</string>
    
</resources>
